# whisper-writer

./: README.md  pyproject.toml
src/: config_schema.yaml  input_simulation.py  key_listener.py  main.py  result_thread.py  sound_player.py  transcription.py
src/ui/: settings_window.py  status_window.py
