[project]
name = "whisper-writer"
version = "1.0.1"
requires-python = ">=3.11,<3.12"
dependencies = [
  "audioplayer==0.6",
  "evdev>=1.6.1; platform_system == 'Linux'",
  "faster-whisper==1.0.2",
  "lameenc==1.8.1",
  "numpy==1.24.3",
  "openai==1.28.0",
  "pynput==1.7.6",
  "pyperclip==1.8.2",
  "PyQt5==5.15.10",
  "python-dotenv==1.0.0",
  "PyYAML==6.0.1",
  "sounddevice==0.4.6",
  "soundfile==0.12.1",
  "webrtcvad-wheels==2.0.11.post1",
]
